--- a/kaszubnet_app/templates/index.html
+++ b/kaszubnet_app/templates/index.html
@@ -33,7 +33,7 @@
                 <div class="col-md-12 d-flex align-items-center justify-content-center" style="height: 80vh;">
                     <div class="container mt-3 text-center">
                         <h3>Logowanie:</h3>
-                        <form method="post">
+                        <form method="post" action=".">
                             {% csrf_token %}
                             <div class="mb-3 mt-3">
                                 <label>Login:</label>
